# CMake_Example

./: CMakeLists.txt  README.md
app_proj/: CMakeLists.txt
app_proj/include/app/: Hello.h
app_proj/src/: Hello.cpp  main.cpp
header_only_lib_proj/: CMakeLists.txt
header_only_lib_proj/include/lib2/: World.h
lib_proj/: CMakeLists.txt
lib_proj/include/lib/: Reverse.h  Vec3.h
lib_proj/src/: Reverse.cpp
testing/: CMakeLists.txt
testing/src/: unit_tests.cpp
